    - Fixed NKSP parser warning "Not a statement" when assigning an
      initializer list to an array variable.
    - Implemented built-in script array variable "%ALL_EVENTS".
    - Implemented built-in script function "in_range()".

  * Instruments DB:
    - Fixed memory access bug of general DB access code which lead to
      undefined behavior.

Version 2.0.0 (15 July 2015)

  * packaging changes:
    - fixed building with newer MinGW-w64
    - Mac OS X: support the new dir for Core Audio SDK
    - Mac OS X: fixed building outside source directory
    - made sure all source files for hostplugins are included when
      doing "make dist"
    - removed empty directories left from the cvs to svn migration
    - fixed compilation with gcc 4.6.1
    - another "make dist" fix, for the LV2 plugin
    - made --enable-pthread-testcancel default on Mac OS X
    - minor Makefile fix for building lscpparser when build and source
      directories are separate
    - Mac OS X: made it possible to specify plugin installation dir to
      configure
    - Mac OS X: Makefile fix for the install-strip target
    - fixed compilation with gcc 4.7
    - fixed configure script error with old autoconf versions
    - lsatomic.h: use gcc provided atomic functions if building with
      gcc 4.7 and C++11
    - modernized configure script
    - fixed linkage error when building with
      LDFLAGS="-Wl,--no-undefined" (#190)
    - fixed compilation with Clang 3.2
    - removed usage of deprecated Automake variable INCLUDES
    - fixed building with C++11
    - build fix: ChangeFlagRelaxed.h was missing in makefile
    - build fix: libsndfile compiler flags were missing in some
      makefiles
    - fix for building with bison 3.0 (#202)
    - Mac OS X: added temporary hack allowing to spawn gigedit as callback
      on the process's main thread
    - fixed build error on newer MinGW
    - support building with older jack versions
    - support building with spaces in vst sdk path